--- a/views/map/index.html
+++ b/views/map/index.html
@@ -5,10 +5,15 @@
     <title>Kalaxia</title>
     <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/map.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/journey.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/planet.css" />
   </head>
   <body>
     <div id="map">
-
+        <div class="contextMenuMapWarper">
+            <div class="contextMenuMap">
+            </div>
+        </div>
     </div>
     <div id="minimap">
 
@@ -17,12 +22,21 @@
       <h3></h3>
       <img id="logout" src="/static/images/logout.svg" onclick="logout();"/>
     </div>
+    <div id="menu-journey">
+        <div>
+            <div class="menu-title" data-translate="true"> journey.planer.title </div>
+            <div class="menu-time"><span data-translate="true"> journey.planer.estimated_time </span> <span class="time deactivate" data-translate="true"> journey.planer.no_time </div>
+                <div class="menu-cancel"> <div id="remove-last-step" class="button deactivate" data-translate="true">journey.planer.remove_last_step</div> </div>
+            <div class="menu-send"> <div id="send-fleet-button" class="button deactivate" data-translate="true">journey.planer.send_fleet</div> </div>
+            <div class="menu-error"> </div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="module" src="/static/js/main.js"></script>
     <script type="module">
         import App from '/static/js/core/app.js';
-        import { initMap } from '/static/js/map.js';
+        import { initMapForJourneyPlaner,initMap } from '/static/js/map.js';
         
         
         const urlParams = new URLSearchParams(window.location.search);
@@ -33,8 +47,14 @@
         }
         
         const initMapAll = () => {
+            if (fleetId != null && fleetId != undefined) {
+                initMapForJourneyPlaner();
+            }
+            else{
+                initMap();
+            } 
             
-            initMap();
+            
             
             
         }
