--- a/views/base/production.html
+++ b/views/base/production.html
@@ -12,7 +12,9 @@
                 <h3 data-translate="true">planet.resources</h3>
             </header>
             <section>
-              <canvas id="resource-density" width="400px" height="400px"></canvas>
+              <div id="chart-background">
+                <canvas id="resource-density" width="500px" height="500px"></canvas>
+              </div>
             </section>
         </div>
 
