--- a/static/css/journey.css
+++ b/static/css/journey.css
@@ -174,3 +174,10 @@
 #menu-journey > div > div > div.button:not(.deactivate):hover{
 	background-color: #333;
 }
+
+#map > .fleet-position {
+	position: absolute;
+	width: 30px;
+	height: 30px;
+	background-image: url(../../static/images/map/Picto_Flotte_30px.png);
+}
