--- a/views/fleet/fleet.html
+++ b/views/fleet/fleet.html
@@ -25,9 +25,12 @@
                 <section>
                     <h3 data-translate="true">fleet.view.single.title</h3>
                 </section>
-                <section id=fleet-delete-section>
-                    <div id="fleet-delete" data-translate="true">fleet.view.single.delete</div>
+                <section id="fleet-delete-section" class="button-container">
+                    <div id="fleet-delete" class="button-big" data-translate="true">fleet.view.single.delete</div>
                     <div id="fleet-delete-error" class="error"> </div>
+                </section>
+                <section id="fleet-journey-send-section" class="button-container">
+                    <div id="fleet-journey-send" data-translate="true" class="button-big">fleet.view.single.journey_send</div>
                 </section>
                 <section id="fleet-detail">
                     <table id = "fleet-table"></table>
