--- a/views/base/trade/dashboard.html
+++ b/views/base/trade/dashboard.html
@@ -69,6 +69,7 @@
             <footer></footer>
         </div>
 
+        <div id="offer-details"></div>
 
         <script type="text/javascript" src="/config/config.js"></script>
         <script type="module" src="/static/js/main.js"></script>
