--- a/static/css/overview.css
+++ b/static/css/overview.css
@@ -39,3 +39,27 @@
   background-size: cover;
   box-shadow: none;
 }
+
+.resource-button {
+    border-radius: 1000px;
+    border-color: #EFEFEF;
+    border-style: solid;
+    border-width: 5px;
+    color: #EFEFEF;
+    font-variant: small-caps;
+    font-family: Electrolize, sans-serif;
+}
+
+.resource-button:hover {
+    background-color: #EFEFEF;
+    color: #090A0A;
+}
+
+.resource-button > a {
+    text-decoration: none;
+    color: #EFEFEF;
+}
+
+.resource-button > a:hover {
+    color:#090A0A;
+}
