--- a/static/css/main.css
+++ b/static/css/main.css
@@ -134,7 +134,11 @@ body {
     margin: auto;
 }
 
-#top-menu > section > header > img {
+#top-menu > section > header > a {
+    display: block;
+}
+
+#top-menu > section > header > a > img {
     display: block;
     margin: auto;
     width: 58px;
@@ -405,8 +409,9 @@ body {
     z-index: 2;
 }
 
-#right-menu > section > div {
+#right-menu > section > a {
     position: absolute;
+    display: block;
     right: -10px;
     bottom: -10px;
     background-color: #B9B9B9;
@@ -415,7 +420,7 @@ body {
     border-radius: 200px;
 }
 
-#right-menu > section > div > img {
+#right-menu > section > a > img {
     display: block;
     margin: auto;
     width: 96px;
