--- a/static/css/shipyard.css
+++ b/static/css/shipyard.css
@@ -146,7 +146,7 @@ html, body {
 
 
 #ships-list > section > .ship-model > header > img {
-    width: 100%;
+    height: 100%;
 }
 
 #ships-list > section > .ship-model > footer {
