--- a/static/css/map.css
+++ b/static/css/map.css
@@ -221,9 +221,10 @@ html {
 #system > .planet[data-type="volcanic"] { background-color: #C60000;border: 2px solid #C60000; }
 
 #map-link {
-    grid-column: 1;
+    grid-column: 1/3;
     grid-row: 5;
-  padding-left: 20px;
+    padding-left: 20px;
+    z-index: 50;
 }
 
 #map-link > a {
