--- a/views/overview/index.html
+++ b/views/overview/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
     <script type="text/javascript" src="/config/config.js"></script>
-    <script type="module" src="/static/js/main.js"></script>
-    <script type="module" src="/static/js/overview.js"></script>
+    <script type="module" src="/dist/js/main.js"></script>
+    <script type="module" src="/dist/js/overview.js"></script>
   </body>
 </html>
