--- a/views/overview/index.html
+++ b/views/overview/index.html
@@ -8,15 +8,9 @@
     <link rel="stylesheet" type="text/css" href="/static/css/planet.css" />
   </head>
   <body>
-      <div id="player">
-        <div id="planets">
-          <header>
-            <h2 data-translate="true">profile.planets.title</h2>
-          </header>
-          <section>
-          </section>
-        </div>
-      </div>
+    <div id="overview" v-bind:style="{ 'grid-row': '3/10', 'grid-column': '2/6' }">
+      <planet-list v-bind:planets="planets"></planet-list>
+    </div>
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="module" src="/dist/js/main.js"></script>
     <script type="module" src="/dist/js/overview.js"></script>
