--- a/views/overview/index.html
+++ b/views/overview/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Kalaxia</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
-    <link rel="stylesheet" type="text/css" href="/static/css/overview.css" />
-    <link rel="stylesheet" type="text/css" href="/static/css/planet.css" />
-  </head>
-  <body>
-    <div id="overview" v-bind:style="{ 'grid-row': '3/10', 'grid-column': '2/6' }">
-      <planet-list v-bind:planets="planets"></planet-list>
-    </div>
-    <script type="text/javascript" src="/config/config.js"></script>
-    <script type="module" src="/dist/js/main.js"></script>
-    <script type="module" src="/dist/js/overview.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Kalaxia</title>
+        <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/overview.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/planet.css" />
+    </head>
+    <body>
+        <div id="app" v-bind:style="appStyle">
+            <top-menu v-if="player" v-bind:faction="player.faction"></top-menu>
+            <planet-list v-bind:planets="planets"></planet-list>
+            <bottom-menu v-bind:player="player" v-bind:planet="currentPlanet"></bottom-menu>
+        </div>
+        
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
+        <script type="text/javascript" src="/config/config.js"></script>
+        <script type="module" src="/dist/js/main.js"></script>
+        <script type="module" src="/dist/js/overview.js"></script>
+    </body>
 </html>
