--- a/views/faction/index.html
+++ b/views/faction/index.html
@@ -8,29 +8,17 @@
     <link rel="stylesheet" type="text/css" href="/static/css/faction.css" />
   </head>
   <body>
-    <div id="faction">
-      <div id="infos">
-        <h1>
-        </h1>
-      </div>
+    <div id="app" v-bind:style="appStyle">
+        <top-menu v-if="player" :faction="player.faction"></top-menu>
+        <faction-data id="faction-data" v-if="faction" :faction="faction"></faction-data>
+        <faction-members id="faction-members" v-if="faction" :faction="faction"></faction-members>
+        <faction-relations id="faction-relations" v-if="faction" :faction="faction"></faction-relations>
+        <bottom-menu v-bind:player="player" :planet="currentPlanet"></bottom-menu>
     </div>
-    <div id="members">
-        <header>
-            <h3 data-translate="true">faction.members.title</h3>
-        </header>
-        <section>
-        </section>
-    </div>
-    <div id="faction-relations">
-        <header>
-            <h3 data-translate="true">faction.relations.title</h3>
-        </header>
-        <section>
-
-        </section>
-    </div>
+    
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script> -->
     <script type="text/javascript" src="/config/config.js"></script>
-    <script type="module" src="/static/js/main.js"></script>
-    <script type="module" src="/static/js/faction.js"></script>
+    <script type="module" src="/dist/js/main.js"></script>
+    <script type="module" src="/dist/js/faction.js"></script>
   </body>
 </html>
