--- a/views/overview/index.html
+++ b/views/overview/index.html
@@ -14,7 +14,7 @@
             <bottom-menu v-bind:player="player" v-bind:planet="currentPlanet"></bottom-menu>
         </div>
         
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script> -->
         <script type="text/javascript" src="/config/config.js"></script>
         <script type="module" src="/dist/js/main.js"></script>
         <script type="module" src="/dist/js/overview.js"></script>
