--- a/views/fleet/fleet-all.html
+++ b/views/fleet/fleet-all.html
@@ -8,23 +8,14 @@
         <link rel="stylesheet" type="text/css" href="/static/css/fleet.css" />
     </head>
     <body>
-        <div id="fleets-view">
-            <header>
-                <h3 data-translate="true">fleet.view.all.title</h1>
-            </header>
-            <section id="fleets-list">
-            <span id="error-fleet-list-section"></span>
-            <table id="fleet-table"></table>
-            </section>
+        <div id="app" :style="appStyle">
+            <top-menu v-if="player" :faction="player.faction"></top-menu>
+            <fleets-list :fleets="fleets"></fleets-list>
+            <bottom-menu :player="player" :planet="currentPlanet"></bottom-menu>
         </div>
 
         <script type="text/javascript" src="/config/config.js"></script>
-        <script type="module" src="/static/js/main.js"></script>
-        <script type="module">
-            import { initFleetView } from '/static/js/fleet.js';
-            import App from '/static/js/core/app.js';
-
-            App.init().then(() => { initFleetView() });
-        </script>
+        <script type="text/javascript" src="/dist/js/main.js"></script>
+        <script type="text/javascript" src="/dist/js/fleets.js"></script>
   </body>
 </html>
