--- a/views/fleet/fleet-all.html
+++ b/views/fleet/fleet-all.html
@@ -4,8 +4,6 @@
         <meta charset="UTF-8" />
         <title>Kalaxia</title>
         <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
-        <link rel="stylesheet" type="text/css" href="/static/css/base.css" />
-        <link rel="stylesheet" type="text/css" href="/static/css/fleet.css" />
     </head>
     <body>
         <div id="app" :style="appStyle">
@@ -14,8 +12,9 @@
             <bottom-menu :player="player" :planet="currentPlanet"></bottom-menu>
         </div>
 
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
         <script type="text/javascript" src="/config/config.js"></script>
         <script type="text/javascript" src="/dist/js/main.js"></script>
-        <script type="text/javascript" src="/dist/js/fleets.js"></script>
+        <script type="text/javascript" src="/dist/js/fleet/list.js"></script>
   </body>
 </html>
