--- a/views/base/production.html
+++ b/views/base/production.html
@@ -4,37 +4,18 @@
         <meta charset="UTF-8" />
         <title>Kalaxia</title>
         <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
-        <link rel="stylesheet" type="text/css" href="/static/css/base.css" />
     </head>
     <body>
-        <div id="planet-production" class="resource-list">
-            <header>
-                <h3 data-translate="true">planet.resources</h3>
-            </header>
-            <section>
-              <div id="chart-background">
-                <canvas id="resource-density" width="500px" height="500px"></canvas>
-              </div>
-            </section>
+        <div id="app" :style="appStyle">
+            <top-menu v-if="player" :faction="player.faction"></top-menu>
+            <resource-density-graph v-if="currentPlanet" :resources="currentPlanet.resources"></resource-density-graph>
+            <resource-storage v-if="currentPlanet" :resources="currentPlanet.resources" :storage="currentPlanet.storage"></resource-storage>
+            <bottom-menu :player="player" :planet="currentPlanet"></bottom-menu>
         </div>
 
-        <div id="planet-storage" class="storage-list">
-            <header>
-                <h3 data-translate="true">planet.storage.name</h3>
-            </header>
-            <section></section>
-        </div>
-
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
         <script type="text/javascript" src="/config/config.js"></script>
-        <script type="text/javascript" src="/static/js/lib/chart.js"></script>
-        <script type="module" src="/static/js/main.js"></script>
-
-        <script type="module">
-            import App from '/static/js/core/app.js';
-            import Dictionnary from '/static/js/core/dictionnary.js';
-            import { initBaseProduction} from '/static/js/production.js';
-
-            App.init().then(() => { initBaseProduction() });
-        </script>
+        <script type="text/javascript" src="/dist/js/main.js"></script>
+        <script type="text/javascript" src="/dist/js/planet/production.js"></script>
   </body>
 </html>
