--- a/static/less/atoms/box.less
+++ b/static/less/atoms/box.less
@@ -1,1 +1,2 @@
 @smallBoxClipPath: polygon(10% 0%, 90% 0%, 100% 20%, 100% 80%, 90% 100%, 10% 100%, 0% 80%, 0% 20%);
+@smallRectClipPath: polygon(10% 0%, 90% 0%, 100% 10%, 100% 90%, 90% 100%, 10% 100%, 0% 90%, 0% 10%);
