--- a/static/less/main.less
+++ b/static/less/main.less
@@ -3,6 +3,9 @@
 html {
     height: 100%;
     background-color: #1e2024;
+    background-image: url('/static/images/background_general.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     color: #EFEFEF;
     font-family: 'Electrolize', serif;
 }
