--- a/static/less/main.less
+++ b/static/less/main.less
@@ -2,10 +2,7 @@
 
 html {
     height: 100%;
-    background-color: #1e2024;
-    background-image: url('/static/images/background_general.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #000;
     color: #EFEFEF;
     font-family: 'Electrolize', serif;
 }
@@ -22,6 +19,16 @@ body {
     grid-template-columns: repeat(10, 1fr);
     grid-gap: 0px;
     grid-auto-rows: minmax(10%, auto);
+
+    &::before {
+        position: absolute;
+        content: ' ';
+        opacity: 0.5;
+        width: 100%;
+        height: 100%;
+        background: url('/static/images/background_general.png') no-repeat;
+        background-size: cover;
+    }
 }
 
 .top-menu, .bottom-menu, #logout {
