--- a/views/base/shipyard.html
+++ b/views/base/shipyard.html
@@ -22,7 +22,7 @@
         <div id="ships-list">
             <header>
                 <button onclick="displayFrames();">
-                    <img src="/static/images/buildings/build.svg"/>
+                    <img src="/images/buildings/build.svg"/>
                     <span data-translate="true">ships.create_model</span>
                 </button>
             </header>
