--- a/assets/less/atoms/button.less
+++ b/assets/less/atoms/button.less
@@ -1,8 +1,8 @@
 .button {
     background-color: black;
-    padding: 10px 20px;
+    padding: 5px 30px 10px 30px;
     border: 2px solid white;
-    border-radius: 10px;
+    border-radius: 50px;
     font-variant: small-caps;
     font-weight: bold;
     text-align: center;
@@ -10,7 +10,6 @@
 
     & > .big {
         display: block;
-        padding-bottom: 5px;
-        font-size: 2em;
+        font-size: 1.6em;
     }
 }
