Implement planet demography page with population points updating

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -48,10 +48,15 @@ body, #__nuxt, #__layout {
     margin-right: 10px;
 
     .module {
+        display: block;
+        color: white;
+        text-decoration: none;
         margin: 5px 10px;
 
         & > header {
             position: relative;
+            display: flex;
+            justify-content: center;
 
             & > div {
                 padding: 8px;
