--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -70,6 +70,8 @@ body, #__nuxt, #__layout {
 }
 
 #wrapper {
+    position: relative;
+    overflow: hidden;
     z-index: 2;
     grid-row: ~"1/11";
     grid-column: ~"1/11";
