--- a/assets/less/atoms/button.less
+++ b/assets/less/atoms/button.less
@@ -7,6 +7,7 @@
     font-weight: bold;
     text-align: center;
     letter-spacing: 2px;
+    cursor: pointer;
 
     & > .big {
         display: block;
