Remove underline of the create model button

--- a/assets/less/atoms/button.less
+++ b/assets/less/atoms/button.less
@@ -5,6 +5,7 @@
     border-radius: 50px;
     font-variant: small-caps;
     font-weight: bold;
+    text-decoration: none;
     text-align: center;
     letter-spacing: 2px;
     cursor: pointer;
