--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -86,3 +86,10 @@ body, #__nuxt, #__layout {
     top: 20px;
     right: 20px;
 }
+
+#notifications {
+    grid-column: 10;
+    grid-row: ~"3/9";
+    margin-bottom: 30px;
+    z-index: 3;
+}
