Implement action notifications in the main layout

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -93,3 +93,10 @@ body, #__nuxt, #__layout {
     margin-bottom: 30px;
     z-index: 3;
 }
+
+#action-notifications {
+    margin-top: 20px;
+    grid-column: ~"8/10";
+    grid-row: ~"2/6";
+    z-index: 3;
+}
