Implement territory panel

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -96,5 +96,6 @@ body, #__nuxt, #__layout {
     margin-top: 20px;
     grid-column: ~"8/10";
     grid-row: ~"2/6";
+    height: 0px;
     z-index: 10;
 }
