Fix removal button condition in fleet details toolbar

--- a/assets/less/atoms/button.less
+++ b/assets/less/atoms/button.less
@@ -10,6 +10,7 @@
     letter-spacing: 2px;
     cursor: pointer;
     transition: background-color 0.2s ease-out;
+    font-size: 14px;
 
     &:hover {
         background-color: black;
